--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -9,6 +9,7 @@
     max-height: 40rem;
     border: 1rem solid var(--color-white);
     transition: var(--transition);    
+    filter: grayscale(1);
 }
 
 .about__portrait:hover {
