--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -20,10 +20,11 @@ header {
 
 .header__profile {
     width: 18rem;
-    height: 22rem;
-    border-radius: 9rem 9rem 2rem 2rem;
+    /* height: 22rem; */
+    border-radius: 1rem 1rem 1rem 1rem;
     overflow: hidden;
     margin-bottom: 1.5rem;
+    filter: grayscale(1);
 }
 
 .header__container p {
@@ -61,6 +62,25 @@ header {
     background: var(--color-primary);
     color: var(--color-white);
     transform: translateX(-0.5rem);
+}
+
+.contact__container a {
+    width: 3.5rem;
+    aspect-ratio: 1/1;
+    color: white;
+    background: var(--color-primary);
+    display: grid;
+    place-items: center;
+    font-size: 2rem;
+    border: 2px solid transparent;
+    border-radius: var(--border-radius-1);
+}
+
+.contact__container a:hover {
+    background: transparent;
+    border-color: var(--color-primary);
+    color: var(--color-primary);
+    transform: translateY(-0.5rem);
 }
 
 
