--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -1,21 +1,16 @@
 .contact__container {
+    display: grid;
+    grid-template-columns: 35% 53%;
+    gap: 12%;
+}
+
+.socials__container {
     width: fit-content;
     display: flex;
     justify-content: center;
     gap: 3rem;
 }
 
-.contact__container a {
-    width: 5rem;
-    aspect-ratio: 1/1;
-    color: white;
-    background: var(--color-primary);
-    display: grid;
-    place-items: center;
-    font-size: 2rem;
-    border: 2px solid transparent;
-    border-radius: var(--border-radius-1);
-}
 
 .contact__container a:hover {
     background: transparent;
@@ -23,6 +18,62 @@
     color: var(--color-primary);
     transform: translateY(-0.5rem);
 }
+
+.contact-form-div {
+    padding-right: 8%;
+    padding-left: 8%;
+}
+
+form {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 100%;
+    font-size: 16px;
+}
+
+input {
+    width: 100%;
+    height: 35px;
+    padding: 7px;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid rgb(220, 220, 220);
+}
+
+&:focus {
+border: 2px solid rgba(0, 206, 158, 1);
+}
+
+textarea {
+max-width: 100%;
+min-width: 100%;
+width: 100%;
+max-height: 100px;
+min-height: 100px;
+padding: 7px;
+outline: none;
+border-radius: 5px;
+border: 1px solid rgb(220, 220, 220);
+} 
+
+&:focus {
+border: 2px solid rgba(0, 206, 158, 1);
+}
+
+label {
+margin-top: 1rem;
+}
+
+input[type="submit"] {
+margin-top: 2rem;
+cursor: pointer;
+background: var(--color-primary);
+display: grid;
+color: white;
+border: none;
+}
+
 
 
 
