--- a/src/sections/contact/contact.css
+++ b/src/sections/contact/contact.css
@@ -1,6 +1,6 @@
 .contact__container {
     display: grid;
-    grid-template-columns: 35% 53%;
+    grid-template-columns: 40% 45%;
     gap: 12%;
 }
 
@@ -11,6 +11,17 @@
     gap: 3rem;
 }
 
+.contact__left {
+    display: block;
+    justify-content: center;
+    align-items: center;
+}
+
+.flower {
+    padding-bottom: 1rem;
+    padding-top: 1rem;
+
+}
 
 .contact__container a:hover {
     background: transparent;
@@ -19,10 +30,10 @@
     transform: translateY(-0.5rem);
 }
 
-.contact-form-div {
+/* .contact-form-div {
     padding-right: 8%;
     padding-left: 8%;
-}
+} */
 
 form {
     display: flex;
@@ -74,8 +85,31 @@ color: white;
 border: none;
 }
 
+.contact__portrait {
+    height: fit-content;
+    max-height: 40rem;
+    border: 1rem solid var(--color-white);
+    transition: var(--transition);    
+}
 
+.contact__portrait:hover {
+    border-width: 0;
+}
 
+/* MEDIA QUERIES (tablets) */
+@media screen and (max-width: 1024px) {
+    .contact__left {
+        display: none;
+    }
+
+    .contact__container {
+        grid-template-columns: 1fr;
+    }
+
+    .contact__right h2 {
+        text-align: center;
+    }
+}
 
 /* MEDIA QUERIES (phones) */
 @media screen and (max-width: 600px) {
