about me section content added

--- a/src/sections/about/about.css
+++ b/src/sections/about/about.css
@@ -52,8 +52,9 @@
     margin-bottom: 0.8rem;
 }
 
-.about__right .btn {
-    margin-top: 2.5rem;
+.about__left .btn {
+    margin-top: 2rem;
+    justify-content: center;
 }
 
 
