--- a/src/sections/navbar/navbar.css
+++ b/src/sections/navbar/navbar.css
@@ -8,6 +8,8 @@ nav {
     top: 0;
     left: 0;
     z-index: 9;
+    /* hsla --> ALPHA gives a shade of the primary color for the shadow on the 
+    sections */
     box-shadow: 0 1rem 1.5rem hsla(var(--primary-hue), 68%, 42%, 20%);
     transition: var(--transition);
 }
